MDEV-6519: Assertion `join->best_read < double(...)' failed after adding a key to a TokuDB table...

- calculate_cond_selectivity_for_table() should handle the case
  where index statistics is not available (zeros are returned 
  in rec_per_key)